# ced-suite

./: .gitignore  =1.0.0  LICENSE  README.md  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_pdf.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  epic.yml  feature.yml
api/: main.py  requirements.txt
backend/app/compliance/: __init__.py  config.py  document_processing.py  evaluation.py  fallback.py  guardrails.py  llm_client.py  models.py  prompting.py  proposal_analysis.py  proposal_models.py  registry.py  retrieval.py  scoring.py  service.py  storage.py  warnings_engine.py
backend/app/llm/: client.py  llm_utils.py
backend/app/parsers/: grant_parsers.py
backend/app/quant-data/: nunavut_table1_tenure.csv  nunavut_table2_core_housing_need.csv  nunavut_table2_dwelling_conditions.csv
backend/app/rag/: __init__.py  bm25.py  ingest.py  rerank.py  retrieve.py  store.py  use_cases.py  utils.py
backend/app/utils/: grant_utils.py  validation_utils.py
frontend/: .env.local  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/scripts/: dev-server.mjs
frontend/src/app/: globals.css  page.tsx  (+1 more)
scripts/: build_compliance_artifacts.py  build_comprehensive_index.py  build_index.py  evaluate_retrieval.py
streamlit_app/: app.py
streamlit_app/pages/: Grant_Writer.py  Impact_Planner.py
tests/: test_api_compliance.py  test_compliance_models.py  test_guardrails.py  test_rag_integration.py  test_retrieval.py  test_warnings_engine.py
tests/fixtures/: section_examples.json
(+58 files in other folders)
