[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ced-suite"
version = "0.1.0"
description = "CED Suite – AI-powered grant and impact planning tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-generativeai>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
